[8] add json result checking